src/test/deca/context/valid/created/objet/cast_object.deca
// Description :
//      test de verification classe object cast
// Resultats :
//      ok
class A{

}
{
    Object o = new A() ;
    A a = new A();
    a = (A) (o);
}