src/test/deca/context/invalid/created/objet/affect_object.deca
// Description :
//      test de verification classe object cast
// Resultats :
//      Ligne 11 : Rvalue problem
class A{

}
{
    Object o ;
    A a = new A();
    a = o;
}